--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 SPOTIPY_CLIENT_ID=
 SPOTIPY_CLIENT_SECRET=
 SPOTIPY_REDIRECT_URI=http://localhost:8888/callback
-TESTING_SPOTIFY_RESPONSE=
+
+SPOTIFY_CODE=
