Added DB support

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ SPOTIPY_CLIENT_SECRET=
 SPOTIPY_REDIRECT_URI=http://localhost:8888/callback
 
 SPOTIFY_CODE=
+
+DATABASE_URL=postgresql://user:password@host.docker.internal:5432/filemon
