--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,11 @@ services:
       - ./:/src
     env_file:
       - .env
+  db:
+    image: postgres:14.3
+    environment:
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=filemon
+    ports:
+      - '5432:5432'
