--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,6 +1,6 @@
 name: "Python"
 
-on: [push]
+on: [ push ]
 
 jobs:
   hello_world_job:
@@ -10,11 +10,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Build the stack
+        run: docker-compose up filemon -d
+
       - name: flake8
-        run: docker-compose run --rm filemon flake8 .
+        run: flake8 .
 
       - name: mypy
-        run: docker-compose run --rm filemon mypy .
+        run: mypy .
 
       - name: pytest
-        run: docker-compose run --rm filemon pytest .
+        run: pytest .
+
+      - name: Stop containers
+        if: always()
+        run: docker-compose down
