Another attempt with Python workflow

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -10,6 +10,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: 'Create env file'
+        run: touch .env
+
       - name: Build the stack
         run: docker-compose up filemon -d
 
