--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -14,7 +14,7 @@ jobs:
         run: touch .env
 
       - name: Build the stack
-        run: docker-compose up filemon -d
+        run: docker-compose up -d filemon
 
       - name: flake8
         run: flake8 .
