--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -14,16 +14,16 @@ jobs:
         run: touch .env
 
       - name: Build the stack
-        run: docker-compose up -d filemon
+        run: docker-compose build filemon
 
       - name: flake8
-        run: docker-compose run --rm filemon flake8 .
+        run: make test-flake8
 
       - name: mypy
-        run: docker-compose run --rm filemon mypy .
+        run: make test-mypy
 
       - name: pytest
-        run: docker-compose run --rm filemon pytest .
+        run: make test-pytest
 
       - name: Stop containers
         if: always()
