--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: 'Create env file'
-        run: touch .env
+        run: cp .env.example .env
 
       - name: Build the stack
         run: docker-compose build filemon
