--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Terraform Plan
         id: plan
         if: github.event_name == 'pull_request'
+        env:
+          TF_VAR_db_password: ${{ secrets.TF_VAR_db_password }}
         run: terraform -chdir=infra/ plan -no-color -input=false
         continue-on-error: true
 
