--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -69,4 +69,6 @@ jobs:
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        env:
+          TF_VAR_db_password: ${{ secrets.TF_VAR_db_password }}
         run: terraform -chdir=infra/ apply -auto-approve -input=false
